--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,14 +1,25 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>ClientApp</title>
-  <base href="/">
+<!DOCTYPE html>
+<html lang="pt-BR">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.34c57ab7888ec1573f9c.css"></head>
+<head>
+  <title>Finanças</title>
+  <style rel="stylesheet">
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #ddd;
+    }
+
+    .MuiList-padding-2 {
+      padding-bottom: 0 !important;
+    }
+  </style>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
 <body>
-  <app-root></app-root>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.2f4a59095805af02bd79.js"></script><script type="text/javascript" src="main.7f5f0f356d58b9f1603b.js"></script></body>
+  <div id="app"></div>
+  <script src="/bundle.js"></script>
+</body>
+
 </html>
