--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -2,7 +2,10 @@
 <html lang="pt-BR">
 
 <head>
-  <title>Cashflow</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+  <title>Educação Financeira (RS)</title>
   <meta charset="utf-8" />
   <style rel="stylesheet">
     body {
