--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -5,7 +5,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-  <title>Educação Financeira (RS)</title>
+  <title>Fluxo de Caixa (RS)</title>
   <meta charset="utf-8" />
   <style rel="stylesheet">
     body {
