Issue #109 - Implementação do Google Oauth

--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
 <html lang="pt-BR">
 
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" async rel="stylesheet">
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
   <title>Fluxo de Caixa (RS)</title>
   <meta charset="utf-8" />
   <style rel="stylesheet">
