--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -3,15 +3,31 @@
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" async rel="stylesheet">
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   <title>Fluxo de Caixa (RS)</title>
   <meta charset="utf-8" />
   <style rel="stylesheet">
+
+    @font-face {
+        font-family: PermanentMarker;
+        src: url(/Permanent-Marker.woff2);
+    }
+
+    @font-face {
+        font-family: GraphikMedium;
+        src: url(/Graphik-Medium.ttf);
+    }
+
+    @font-face {
+        font-family: GraphikRegular;
+        src: url(/Graphik-Regular.ttf);
+    }
+
     body {
       margin: 0;
       padding: 0;
       background-color: #ddd;
+      font-family: GraphikRegular;
     }
 
     .MuiList-padding-2 {
