Issue #147 - Reformular tela de cartões de crédito exibindo os gastos

--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -1,26 +1,51 @@
 <html lang="pt-BR">
 
 <head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   <title>Fluxo de Caixa (RS)</title>
   <meta charset="utf-8" />
   <style rel="stylesheet">
-
     @font-face {
-        font-family: PermanentMarker;
-        src: url(/Permanent-Marker.woff2);
+      font-family: PermanentMarker;
+      src: url(/fonts/Permanent-Marker.woff2);
     }
 
     @font-face {
-        font-family: GraphikMedium;
-        src: url(/Graphik-Medium.ttf);
+      font-family: GraphikMedium;
+      src: url(/fonts/Graphik-Medium.ttf);
     }
 
     @font-face {
-        font-family: GraphikRegular;
-        src: url(/Graphik-Regular.ttf);
+      font-family: GraphikRegular;
+      src: url(/fonts/Graphik-Regular.ttf);
+    }
+
+    @font-face {
+      font-family: FiraCodeBold;
+      src: url(/fonts/FiraCode-Bold.ttf);
+    }
+
+    @font-face {
+      font-family: FiraCodeLight;
+      src: url(/fonts/FiraCode-Light.ttf);
+    }
+
+    @font-face {
+      font-family: FiraCodeMedium;
+      src: url(/fonts/FiraCode-Medium.ttf);
+    }
+
+    @font-face {
+      font-family: FiraCodeRegular;
+      src: url(/fonts/FiraCode-Regular.ttf);
+    }
+
+    @font-face {
+      font-family: FiraCodeSemiBold;
+      src: url(/fonts/FiraCode-SemiBold.ttf);
     }
 
     body {
